@@ -16,6 +16,8 @@ To the Python package:
 
 To programs:
 
+* Added shift= parameter to sfkolmog
+
 ===Bug fixes===
 
 In the reproducible documents collection:
